[workspace]
members = [
    "libnvpair-sys",
    "libnvpair",
    "nvpair",
    "libzfscore-sys",
    "libzfscore",
    "libzfs-sys",
    "libzfs",
    "lzc",
    "zfs",
    "cli",
    #    "property",
    #    "zfsrpc",
    #    "zfsrpc-cli",
    #    "zfsrpc-client",
    #    "rpc-server",
    #    "zpool-client",
    #    "ztool",
    #    "tracing",
    #    "tracing-client",
]
