[workspace]
members = [
    "libnvpair-sys",
    "libnvpair",
    "nvpair",
    "libzfscore-sys",
    "libzfscore",
    "lzc",
    "libzfs-sys",
    "libzfs",
    "safe-libzfs",
    "zfs",
    "cli",
    #    "property",
    #    "zfsrpc",
    #    "zfsrpc-cli",
    #    "zfsrpc-client",
    #    "rpc-server",
    #    "zpool-client",
    #    "ztool",
    #    "tracing",
    #    "tracing-client",
]
