[workspace]
members = [
    "libnvpair-sys",
    "libnvpair",
    "nvpair",
    "libzfscore-sys",
    "libzfscore",
    "safe-lzc",
    "libzfs-sys",
    "libzfs",
    "safe-libzfs",
    "libzpool-sys",
    "libzpool",
    "zfs",
    "cli",
    "test",
    #    "property",
    #    "zfsrpc",
    #    "zfsrpc-cli",
    #    "zfsrpc-client",
    #    "rpc-server",
    #    "zpool-client",
    #    "ztool",
    #    "tracing",
    #    "tracing-client",
]
