[package]
name = "razor-cli"
version = "0.11.0"
edition = "2021"
description = "ZFS cli tools"
repository = "https://github.com/razor-zfs/razor-rs"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["zfs", "zpool"]
categories = ["command-line-tools"]
rust-version = "1.62"

publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["cargo", "derive"] }

razor-zfs = { version = "0.11", path = "../zfs" }
