[package]
name = "razor-libnvpair"
version = "0.13.0"
edition = "2021"
description = "Low-level libnvpair interface"
repository = "https://github.com/razor-zfs/razor-rs"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["zfs", "nvpair"]
categories = ["api-bindings", "development-tools::ffi"]
rust-version = "1.62"


[dependencies]
libc = "0.2"
thiserror = "1.0"

razor-libnvpair-sys = { version = "0.13", path = "../libnvpair-sys" }
