[package]
name = "razor-libzfs-sys"
version = "0.8.0"
edition = "2021"
description = "libzfs FFI bindings"
repository = "https://github.com/razor-zfs/razor-rs"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["zfs"]
categories = ["api-bindings", "external-ffi-bindings"]
links = "zfs"
build = "build.rs"
rust-version = "1.62"


[dependencies]
libc = "0.2"

razor-libnvpair = { version = "0.8", path = "../libnvpair" }


[build-dependencies]
bindgen = "0.60"
pkg-config = "0.3"
