[package]
name = "razor-libzfs"
version = "0.5.0"
edition = "2021"
description = "Low-level libzfs interface"
repository = "https://github.com/razor-zfs/razor-rs"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["zfs"]
categories = ["api-bindings", "development-tools::ffi"]
build = "build.rs"
publish = false

[dependencies]
# chrono = "0.4"
libc = "0.2"
once_cell = "1.8"
# parking_lot = "0.12"
# thiserror = "1.0"

razor-libnvpair = { version = "0.5", path = "../libnvpair" }
razor-nvpair = { version = "0.5", path = "../nvpair" }
razor-libzfscore-sys = { version = "0.5", path = "../libzfscore-sys" }

[build-dependencies]
libc = "0.2"

razor-libzfscore-sys = { version = "0.5", path = "../libzfscore-sys" }
