[package]
name = "razor-libzfs"
version = "0.10.1"
edition = "2021"
description = "Low-level libzfs interface"
repository = "https://github.com/razor-zfs/razor-rs"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["zfs"]
categories = ["api-bindings", "development-tools::ffi"]
build = "build.rs"
rust-version = "1.62"


[dependencies]
libc = "0.2"
once_cell = "1.8"

razor-libnvpair = { version = "0.10", path = "../libnvpair" }
razor-libzfs-sys = { version = "0.10", path = "../libzfs-sys" }


[build-dependencies]
libc = "0.2"

razor-libzfs-sys = { version = "0.10", path = "../libzfs-sys" }
