[package]
name = "razor-libzfscore-sys"
version = "0.13.1"
edition = "2021"
description = "libzfs_core FFI bindings"
repository = "https://github.com/razor-zfs/razor-rs"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["zfs", "zfs_core"]
categories = ["api-bindings", "external-ffi-bindings"]
links = "zfs_core"
build = "build.rs"
rust-version = "1.62"


[dependencies]
libc = "0.2"

razor-libnvpair = { version = "0.13", path = "../libnvpair" }


[build-dependencies]
bindgen = "0.66"
pkg-config = "0.3"
