[package]
name = "razor-libzfscore"
version = "0.5.0"
edition = "2021"
description = "Low-level libzfs_core interface"
repository = "https://github.com/razor-zfs/razor-rs"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["zfs", "zfs_core"]
categories = ["api-bindings", "development-tools::ffi"]

publish = false

[dependencies]
libc = "0.2"
once_cell = "1.8"

razor-libnvpair = { version = "0.5", path = "../libnvpair" }
razor-libzfscore-sys = { version = "0.5", path = "../libzfscore-sys" }
