[package]
name = "razor-nvpair"
version = "0.3.0"
edition = "2021"
description = "Idiomatic nvpair API"
repository = "https://github.com/razor-zfs/razor-rs"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["zfs", "nvpair"]
categories = ["api-bindings"]

[dependencies]
libc = "0.2"
thiserror = "1.0"

razor-libnvpair = { version = "0.3", path = "../libnvpair" }
