[package]
name = "razor-nvpair"
version = "0.10.1"
edition = "2021"
description = "Idiomatic nvpair API"
repository = "https://github.com/razor-zfs/razor-rs"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["zfs", "nvpair"]
categories = ["api-bindings"]
rust-version = "1.62"


[dependencies]
libc = "0.2"
thiserror = "1.0"

razor-libnvpair = { version = "0.10", path = "../libnvpair" }
