[package]
name = "razor-property"
version = "0.9.0"
edition = "2021"
description = "High-level ZFS properties"
repository = "https://github.com/razor-zfs/razor-rs"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["zfs"]
categories = ["api-bindings"]

publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
time = { version = "0.3", features = ["serde"] }
