[package]
name = "razor-rpc-client"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.9", features = ["full"] }
razor-zfsrpc = { version = "0.1", path = "../zfsrpc" }
razor-zfs = {version = "0.1", path = "../zfs"}
tonic = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
structopt = "0.3"
anyhow = "1.0"

[build-dependencies]
tonic-build = "0.5"
