[package]
name = "razor-rpc-server"
version = "0.2.0"
edition = "2021"
build = "build.rs"


[dependencies]
anyhow = "1.0"
razor-zfsrpc = { version = "0.2", path = "../zfsrpc", features = ["dirty"] }
razor-tracing = {version = "0.2", path = "../tracing"}
tokio = { version = "1.9", features = ["full"] }
tonic = "0.7"
tracing = "0.1"
shadow-rs = "0.11"

[build-dependencies]
shadow-rs = "0.11"
