[package]
name = "serde-nvpair"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
razor-nvpair = {version = "0.1", path = "../nvpair"}
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.3", features = ["debug"] }
jemalloc-ctl = "0.3"
