[package]
name = "razor-zfs"
version = "0.10.0"
edition = "2021"
description = "Idiomatic zfs API"
repository = "https://github.com/razor-zfs/razor-rs"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["zfs"]
categories = ["api-bindings"]

publish = false

[dependencies]
libc = "0.2"
log = "0.4"
once_cell = "1.8"
rand = "0.8"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.6"
thiserror = "1.0"
tokio = { version = "1.17", features = ["process"], optional = true }

razor-nvpair = { version = "0.10", path = "../nvpair" }
razor-libzfscore = { version = "0.10", path = "../libzfscore" }
razor-libzfs = { version = "0.10", path = "../libzfs" }
razor-property = { version = "0.10", path = "../property" }

[dev-dependencies]
nanoid = "0.4"

[features]
cmd = ["tokio"]
