[package]
name = "razor-zfs"
version = "0.10.1"
edition = "2021"
description = "Idiomatic zfs API"
repository = "https://github.com/razor-zfs/razor-rs"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["zfs"]
categories = ["api-bindings"]

publish = false

[dependencies]
libc = "0.2"
log = "0.4"
once_cell = { version = "1.13", features = ["parking_lot"] }
rand = "0.8"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.17", features = ["process"], optional = true }

razor-nvpair = { version = "0.10", path = "../nvpair" }
razor-libzfscore = { version = "0.10", path = "../libzfscore" }
razor-libzfs = { version = "0.10", path = "../libzfs" }

[dev-dependencies]
nanoid = "0.4"

[features]
cmd = ["tokio"]
