[package]
name = "razor-zfs"
version = "0.11.0"
edition = "2021"
description = "Idiomatic zfs API"
repository = "https://github.com/razor-zfs/razor-rs"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["zfs"]
categories = ["api-bindings"]

publish = false

[dependencies]
libc = "0.2"
once_cell = { version = "1.13", features = ["parking_lot"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.17", features = ["process"], optional = true }

razor-nvpair = { version = "0.11", path = "../nvpair" }
razor-safe-libzfs = { version = "0.11", path = "../safe-libzfs" }
razor-safe-lzc = { version = "0.11", path = "../safe-lzc" }

[dev-dependencies]
anyhow = "1.0"
nanoid = "0.4"

razor-safe-lzc = { version = "0.11", path = "../safe-lzc" }

[features]
cmd = ["tokio"]
