[package]
name = "razor-zfscore"
version = "0.1.2"
edition = "2021"

[dependencies]
chrono = "0.4"
libc = "0.2"
once_cell = "1.8"
razor-libnvpair = { version = "0.1", path = "../libnvpair" }
razor-nvpair = { version = "0.1", path = "../nvpair" }
razor-zfscore-sys = { version = "0.1", path = "../zfscore-sys" }
thiserror = "1.0"
parking_lot = "0.11"
