[package]
name = "razor-zfscore"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = "0.4"
libc = "0.2"
once_cell = "1.8"
parking_lot = "0.12"
thiserror = "1.0"

razor-libnvpair = { version = "0.2", path = "../libnvpair" }
razor-nvpair = { version = "0.2", path = "../nvpair" }
razor-zfscore-sys = { version = "0.2", path = "../zfscore-sys" }
