[package]
name = "razor-zfsrpc-cli"
version = "0.1.3"
edition = "2018"

[dependencies]
tokio = { version = "1.9", features = ["full"] }
razor-zfsrpc-client = { version = "0.1", path = "../zfsrpc-client" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
structopt = "0.3"
anyhow = "1.0"
