[package]
name = "razor-zfsrpc-cli"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
# bytes = "1.0"
clap = { version = "3.1", features = ["derive"] }
tokio = { version = "1.9", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }

razor-zfsrpc-client = { version = "0.1", path = "../zfsrpc-client" }
