[package]
name = "razor-zfsrpc-client"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tonic = "0.6"
prost = "0.9"
tokio-stream = "0.1"
# tokio = "1.17"

razor-property = { version = "0.2", path = "../property" }

[build-dependencies]
tonic-build = "0.6"
