[package]
name = "razor-zfsrpc"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
itertools = "0.10"
libc = "0.2"
thiserror = "1.0"
tokio = { version = "1.9", features = ["macros", "process", "rt-multi-thread"] }
tokio-pipe = "0.2"
tokio-stream = "0.1"
tracing = "0.1"
tonic = "0.6"
prost = "0.9"

prop-macro = { version = "0.1", path = "../prop-macro" }
razor-property = { version = "0.1", path = "../property" }
razor-tracing = { version = "0.1", path = "../tracing" }
razor-zfs = { version = "0.1", path = "../zfs" }
razor-zfscore = { version = "0.1", path = "../zfscore"}

[build-dependencies]
tonic-build = "0.6"

[features]
dirty = []
