[package]
name = "razor-ztool"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
tokio = { version = "1.9", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing = "0.1"
walkdir = "2.3"

razor-zpool-client = { version = "0.2", path = "../zpool-client" }

[features]
dirty = []
